--- a/AudioProject/MainWindow.xaml
+++ b/AudioProject/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AudioProject"
         mc:Ignorable="d"
-        Background="Black"
-        Foreground="WhiteSmoke"
+        Background="{DynamicResource WindowBackgroudBrush}"
+        Foreground="{DynamicResource WindowForegroundBrush}"
         FontFamily="Calibri"
         Icon="./Images/music.png"
         Title="AudioPlayer" Height="450" Width="800">
