--- a/AudioProject/App.xaml
+++ b/AudioProject/App.xaml
@@ -7,7 +7,7 @@
         <SolidColorBrush x:Key="WindowBackgroudBrush"
                    Color="Black" />
         <SolidColorBrush x:Key="WindowForegroundBrush"
-                         Color="Black"
+                         Color="WhiteSmoke"
             />
         <SolidColorBrush x:Key="WaveFormBackgroundBrush" Color="LimeGreen"/>
     </Application.Resources>
