--- a/AudioProject/MainWindow.xaml
+++ b/AudioProject/MainWindow.xaml
@@ -6,7 +6,6 @@
         xmlns:local="clr-namespace:AudioProject"
         mc:Ignorable="d"
         Background="{DynamicResource WindowBackgroudBrush}"
-        Foreground="{DynamicResource WindowForegroundBrush}"
         FontFamily="Calibri"
         Icon="./Images/music.png"
         Title="AudioPlayer" Height="450" Width="800">
@@ -47,7 +46,7 @@
             <DynamicResource ResourceKey="Again"/>
         </Button>
         <StatusBarItem Grid.Column="6" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock Name="lblProgressStatus">00:00:00</TextBlock>
+            <TextBlock Foreground="{DynamicResource WindowForegroundBrush}" Name="lblProgressStatus">00:00:00</TextBlock>
         </StatusBarItem>
         <StatusBarItem Grid.Column="3" Grid.ColumnSpan="2" HorizontalContentAlignment="Stretch"  Grid.Row="2">
             <Slider Name="sliProgress" Thumb.DragStarted="sliProgressDragStarted"  Thumb.DragCompleted="sliProgressDragCompleted" ValueChanged="sliProgressValueChanged" />
@@ -65,6 +64,6 @@
             <DynamicResource ResourceKey="Settings"/>
         </Button>
         <Canvas x:Name="canvas" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="5" Margin="0"/>
-        <TextBlock x:Name="currentPlaying" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
+        <TextBlock x:Name="currentPlaying" Foreground="{DynamicResource WindowForegroundBrush}" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
     </Grid>
 </Window>
