--- a/AudioProject/SettingsWindow.xaml
+++ b/AudioProject/SettingsWindow.xaml
@@ -77,5 +77,6 @@
         <Button Margin="5,5,5,5" Grid.Row="2" Grid.Column="1" Name="btnOpenPlaylist" Click="btnOpenPlaylist_Click">Open playlist</Button>
         <Label VerticalAlignment="Top" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="3" Content="Export playlist" Foreground="{DynamicResource WindowForegroundBrush}" FontSize="16"></Label>
         <Button Margin="5,5,5,5" Grid.Row="4" Grid.Column="1" Name="btnSavePlaylist" Click="btnSavePlaylist_Click">Save playlist</Button>
+        <Canvas x:Name="equalizerCanvas" Grid.Row="7" Grid.Column="2" Margin="0"/>
     </Grid>
 </Window>
