--- a/AudioProject/LinkPromptWindow.xaml
+++ b/AudioProject/LinkPromptWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Background="{DynamicResource WindowBackgroudBrush}"
         FontFamily="Calibri"
+        Icon="./Images/music.png"
         MinHeight="200"
         MinWidth="300"
         SizeToContent="WidthAndHeight"
@@ -24,9 +25,9 @@
                 <Setter Property="Width" Value="300" />
             </Style>
             <Style TargetType="{x:Type Button}">
-                <Setter Property="Width" Value="50" />
-                <Setter Property="Height" Value="25" />
-                <Setter Property="Margin" Value="5,0,0,0" />
+                <Setter Property="Width" Value="60" />
+                <Setter Property="Height" Value="30" />
+                <Setter Property="Margin" Value="5,0,0,5" />
             </Style>
         </Grid.Resources>
         <Grid.RowDefinitions>
@@ -40,7 +41,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Label Grid.Column="0" Grid.Row="1" FontSize="16" Foreground="{DynamicResource WindowForegroundBrush}" HorizontalAlignment="Center" VerticalAlignment="Center">Web url :</Label>
-        <TextBox Name="LinkTextBox" Grid.Column="1" Grid.Row="1" />
+        <TextBox FontSize="18" Name="LinkTextBox" Grid.Column="1" Grid.Row="1" />
         <StackPanel Grid.Column="3" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Name="okButton" Click="okButtonClick" IsDefault="True">OK</Button>
             <Button Name="cancelButton" Click="cancelButtonClick" IsCancel="True">Cancel</Button>
